--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:all": "npm run test:coverage && npm run test:e2e"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.2.6",
     "@supabase/supabase-js": "^2.39.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
