--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.2.6",
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/supabase-js": "^2.90.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.400.0",
     "next": "^14.2.0",
     "react": "^18.3.1",
